<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGrayTextSpotifyBG1"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_margin="10dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_bg_login_register"


        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:backgroundTint="@color/colorGray2TextSpotify"
            android:textColorHint="@color/colorGray2TextSpotify"
            android:textColor="@color/colorWhite"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:backgroundTint="@color/colorGray2TextSpotify"
            android:textColorHint="@color/colorGray2TextSpotify"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorBlueLight"
            />
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/register_account"
            android:textColor="@color/colorBlueLight"
            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/layout_btn_login_register"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_btn_register_google"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/sign_up_with_email"
        android:textColor="@color/colorWhite"

        />

    <Button
        android:id="@+id/btnRegisterGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_btn_register_google"
        android:padding="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/colorWhite"

        />

</LinearLayout>